Changing options to opts, and staged variable to staging

--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -1,7 +1,7 @@
 service: serverless-plugin-staging-example
 
 custom: 
-  staged:
+  staging:
     excludeFunctions:
       beta:
         - prodHandler
