--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "serverless-plugin-staging",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Handling stage specific deployment for functions and resources",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/icarus-sullivan/serverless-plugin-staging.git"
+  },
+  "bugs": {
+    "url": "https://github.com/icarus-sullivan/serverless-plugin-staging/issues"
+  },
   "files": [
     "index.js"
   ],
